Copy over existing css and fix broken styles
This commit:
- copies over previous css and breaks out in to scss partials where it
makes sense
- refactors the css on the landing page for clarity
- adds class names to templates as needed

--- a/media/scss/base/base.scss
+++ b/media/scss/base/base.scss
@@ -1,34 +1,31 @@
-* { font-family: 'Quattrocento Sans', sans-serif; }
-
-nav {margin-bottom: 3em;}
-
-h1
-{
-	color: #0e48a1;
-	font-weight: 900;
-}
-
-h2
-{
-	margin-top: 1em;
-	font-weight: 700;
-}
-
-h3, p.lead { font-weight: 600; }
-
-h3 { margin-top: 1em; }
-
-
-
-.lead { margin-bottom: 3em; }
-
-
-p a, li a, h3 a { color: #0e48a1; }
-
 .btn-primary { background-color: #0e48a1; }
 
-
 .card a img  {border: 2px solid #ccc;}
-.card  a:hover img  {border: 2px solid #0e48a1;}
+.card a:hover img  {border: 2px solid #0e48a1;}
 
-footer { margin: 3em 0em 3em 0em; }
+#outer-container {
+    padding-bottom: 2em;
+}
+
+.errornote {
+    background: url("/media/img/icon_alert.png") no-repeat 5px 5px #FFEBE8;
+    border: 1px solid #c00 !important;
+    display: block;
+    font-size: 11px !important;
+    margin: 0 0 10px 0;
+    padding: 5px 5px 5px 10px !important;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    line-height: 140%;
+}
+
+#editing-graph {
+    margin: 0 auto;
+}
+
+// Select box appearance reset
+select {
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    appearance:none;
+}
